syntax = "proto3";

package hello;

option go_package = "hello/hellopb";

message Hello {
  string first_name = 1;
  string prefix = 2;
}

message HelloRequest{
  Hello hello = 1;
}

message HelloResponse{
  string custom_hello = 1;
}

message HelloManyLanguagesRequest{
  Hello hello = 1;
}

message HelloManyLanguagesResponse{
  string hello_language = 1;
}

message HellosGoodbyeRequest{
  Hello hello = 1;
}

message HellosGoodbyeResponse{
  string goodbye = 1;
}

message GoodbyeRequest{
  Hello hello = 1;
}

message GoodbyeResponse{
  string goodbye = 1;
}

service HelloService{
  // Unary
  rpc Hello (HelloRequest) returns (HelloResponse){};

  // Server streaming
  // The service return hello/greeting in different languages
  rpc HelloManyLanguages(HelloManyLanguagesRequest) returns (stream HelloManyLanguagesResponse){};

  // Client streaming
  // Send many hellos and response with one goodbye for all people
  rpc HellosGoodbye(stream HellosGoodbyeRequest) returns (HellosGoodbyeResponse){};

  // bidirectional streaming
  // It will send many hellos and the the server will response a goodbye by each one of them
  rpc Goodbye(stream GoodbyeRequest) returns (stream GoodbyeResponse){};
}


